# mnlp_mcqa_model

./: .gitignore  README.md  Tasks.md  chat_template_inspection.ipynb  create_dataset.py  create_dataset_2.py  create_dataset_IF_mixture.py  create_dataset_mcqa.py  finetune.py  finetune_mcqa.py  inspect_dataset.ipynb  inspect_school_dataset.ipynb  model_experiment.ipynb  model_playing.ipynb  pyproject.toml
config/: IF-config.yml  IF-config_sweep.yml  IF_datasets_join.yml  IF_datasets_join_2.yaml  IF_datasets_join_2_no_nlp4ed.yaml  IF_datasets_join_2_only_english.yaml  IF_datasets_join_2_only_english_no_nlp4ed.yaml  MCQA-config.yml  MCQA_datasets_join.yaml  reasoning-config.yml  sweep.yml
src/: configs.py  custom_datasets.py  trainers.py  utils.py
templates/: IF-template.jinja
