[project]
name = "MCQA_model"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "unsloth==2025.4.3",
    "notebook==7.4.*",
    "tqdm==4.67.*",
    "ipywidgets==8.1.*",
    "vllm==0.8.*",
    "lighteval==0.8.*",
    "wandb==0.19.*",
    "datasets==3.5.*",
    "accelerate==1.6.*",
    "hydra-core==1.3.*",
]

# We first have to install torch manually it seems? (we install torch 2.7.0)
# install also manually transformers "transformers==4.51.*",

[project.optional-dependencies]
dev = [
    "mypy>=1.0",                # Static typing
    "ruff==0.3.*",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"